# Application-Template

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
YuHuiVEngine/: CMakeLists.txt
YuHuiVEngine/src/: yhvpch.cpp
YuHuiVEngine/src/YuHuiVEngine/Core/: Application.cpp  Application.h  Base.h  EntryPoint.cpp  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h
YuHuiVEngine/src/YuHuiVEngine/Layers/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp  Layer.h
YuHuiVEngine/src/YuHuiVEngine/Modules/: Module.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
